--- a/package.json
+++ b/package.json
@@ -5,9 +5,19 @@
   "main": "index.js",
   "dependencies": {
     "angular": "^1.5.0",
+    "angular-animate": "1.5.8",
     "angular-ui-bootstrap": "2.1.3",
     "angular-ui-router": "^1.0.0-beta.1",
-    "normalize.css": "^3.0.3"
+    "bootstrap-loader": "1.2.0-beta.1",
+    "bootstrap-sass": "3.3.7",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.9.0",
+    "node-sass": "3.9.3",
+    "normalize.css": "^3.0.3",
+    "resolve-url-loader": "1.6.0",
+    "sass-loader": "4.0.2",
+    "url-loader": "0.5.7",
+    "webpack": "1.13.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0",
